added repositories for category, datasheet and site. Added data for category, asset, datasheet and site in DummyDataInitializer. Created constructors and default constructors for datasheet, site and category. Removed .gitignore from root and adding 2 new .gitignore files in each folder frontend and backend. Added ignores for React in .gitignore

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -13,6 +13,17 @@ target/
 .springBeans
 .sts4-cache
 
+
+### React ###
+/node_modules
+/.pnp
+.pnp.js
+/coverage
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
