--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
