--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.2",
     "react-data-table-component": "^7.6.2",
