--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-cookie": "^7.1.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
