--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM ubuntu:latest
-LABEL authors="grav4"
-
-ENTRYPOINT ["top", "-b"]
+FROM eclipse-temurin:21-jdk-alpine
+WORKDIR /AssetManagementSystem
+COPY target/*.jar /AssetManagementSystem/AssetManagementSystem.jar
+EXPOSE 8080
+CMD ["java", "-jar", "AssetManagementSystem.jar"]
