--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=AssetManagementSystem
-spring.datasource.url=jdbc:mysql://localhost:3306/ams_db
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://${DATABASE_URL}:3306/ams-db
+spring.datasource.username=backend
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
