--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=AssetManagementSystem
 spring.datasource.url=jdbc:mysql://${DATABASE_URL}:3306/ams-db
-spring.datasource.username=backend
-spring.datasource.password=root
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 security.basic.enabled=false
