--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -174,7 +174,7 @@ jobs:
       ARM_TENANT_ID: $(ARM_TENANT_ID)
 
   - script: |
-      "C:\Terraform\terraform" plan -out=tfplan
+      "C:\Terraform\terraform" plan
     displayName: 'Plan Terraform Deployment'
     env:
       ARM_CLIENT_ID: $(ARM_CLIENT_ID)
