--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -156,6 +156,7 @@ jobs:
   - checkout: self  # Checks out the source code into the agent
 
   - script: |
+      az login --service-principal -u $(ARM_CLIENT_ID) -p $(ARM_CLIENT_SECRET) --tenant $(ARM_TENANT_ID)
       "C:\Terraform\terraform" init
     displayName: 'Initialize Terraform'
     env:
