Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -178,6 +178,7 @@ jobs:
       ARM_TENANT_ID: '$(ARM_TENANT_ID)'
 
   - script: |
+      echo $(ARM_TENANT_ID)
       "C:\Terraform\terraform" plan -out=tfplan
     displayName: 'Plan Terraform Deployment'
     env:
