--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -175,7 +175,7 @@ jobs:
       subscriptionId: 77b69bf5-7cdb-462f-a4b2-b88204db74db
       resourceGroupName: ams
       location: Norway East
-      csmFile: $(Build.SourcesDirectory)/infrastructure.json
+      csmFile: $(Build.SourcesDirectory)/VMtemplate.json
       deploymentMode: Incremental
       deploymentName: ams
 
