--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -62,6 +62,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Retry mechanism
+            proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
+            proxy_connect_timeout 2s;
+            proxy_read_timeout 5s;
         }
 
         error_page 404 /404.html;
