Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,6 +123,7 @@ jobs:
     displayName: build and dockerize react/nginx
 
   - script: |
+      cd frontend
       npm run build
       docker build -t ams-nginx .
     displayName: build and dockerize react/nginx
